fixes to about page

--- a/app/views/shared/_testimonials.erb
+++ b/app/views/shared/_testimonials.erb
@@ -30,7 +30,7 @@
     <div class="col-sm-6">
       <div class="testimonial">
         <div class="quote">
-          Education at its best is learning to learn. The Rivendell Program has been established around this
+          Education at its best is learning to learn. The Rivendell Program at San Diego Christian has been established around this
           approach to education, and I heartily endorse this program of study. The old cliché of “teaching kids
           how to think, not what to think” is not a cliché – it actually happens."
           <div class="arrow-down">
