--- a/app/views/site_pages/about.html.erb
+++ b/app/views/site_pages/about.html.erb
@@ -85,19 +85,15 @@
 
     <div class="row stats">
 
-      <div class="col-sm-3">
-        <strong>6</strong> faculty
+      <div class="col-sm-4">
+        <strong>15:2</strong> student to faculty ratio
       </div>
 
-      <div class="col-sm-3">
-        <strong>10</strong> staff
-      </div>
-
-      <div class="col-sm-3">
+      <div class="col-sm-4">
         <strong>9</strong> cohorts strong
       </div>
 
-      <div class="col-sm-3">
+      <div class="col-sm-4">
         <strong>160</strong> graduates
       </div>
 
@@ -106,7 +102,7 @@
     <div class="row team">
 
       <div class="col-md-12 team-row">
-        <%= image_tag 'staff/lorri-300x288.jpg', size: '90x118',
+        <%= image_tag 'staff/lorri-229x300.jpg',
                       data: { toggle:'tooltip', placement:'top', title: 'Lorri Ague - Dean of Adult & Professional Studies' } %>
         <%= image_tag 'staff/evans_bev2-229x300.jpg',
                       data: { toggle:'tooltip', placement:'top', title: 'Bev Evans - Director of Hospitality & Cultural Events' } %>
@@ -117,7 +113,7 @@
         <%= image_tag 'staff/ingle_jeffrey2-229x300.jpg',
                       data: { toggle:'tooltip', placement:'top', title: 'Jeffrey Ingle - Faculty' } %>
         <%= image_tag 'staff/kasperek_kelli2-229x300.jpg',
-                      data: { toggle:'tooltip', placement:'top', title: 'Joe Brunette - Admissions Counselor' } %>
+                      data: { toggle:'tooltip', placement:'top', title: 'Kelli Kasperek - Admissions Counselor' } %>
       </div>
 
       <div class="col-md-12 team-row">
@@ -140,6 +136,8 @@
                       data: { toggle:'tooltip', placement:'top', title: 'Jason Poarch - Recruiting Coordinator' } %>
         <%= image_tag 'staff/reid_david-229x300.jpg',
                       data: { toggle:'tooltip', placement:'top', title: 'Dave Reid - Faculty' } %>
+        <%= image_tag 'staff/petree_alex-229x300.jpg',
+                      data: { toggle:'tooltip', placement:'top', title: 'Alexandra Tousley- Admissions Counselor' } %>
         <%= image_tag 'staff/williams_jordan-229x300.jpg',
                       data: { toggle:'tooltip', placement:'top', title: 'Jordan Williams - Student Life Coordinator' } %>
         <%= image_tag 'staff/yackel_amanda2-229x300.jpg',
