--- a/app/views/site_pages/classically.html.erb
+++ b/app/views/site_pages/classically.html.erb
@@ -68,8 +68,8 @@
         </div>
 
         <div class="other-posts">
-          <%= link_to '← Think through the college core critically', academics_critically_path, class:'prev' %>
-          <%= link_to 'Discuss the college core socratically →', academics_socratically_path, class:'next pull-right' %>
+          <%= link_to '← Think through the college core Critically', academics_critically_path, class:'prev' %>
+          <%= link_to 'Discuss the college core Socratically →', academics_socratically_path, class:'next pull-right' %>
         </div>
 
       </div>
