--- a/app/views/site_pages/critically.html.erb
+++ b/app/views/site_pages/critically.html.erb
@@ -78,8 +78,8 @@
         </div>
 
         <div class="other-posts">
-          <%= link_to '← Journey through the college core globally', academics_globally_path, class:'prev' %>
-          <%= link_to 'Approach the college core classically →', academics_classically_path, class:'next pull-right' %>
+          <%= link_to '← Journey through the college core Globally', academics_globally_path, class:'prev' %>
+          <%= link_to 'Approach the college core Classically →', academics_classically_path, class:'next pull-right' %>
         </div>
 
       </div>
