--- a/app/views/site_pages/holistically.html.erb
+++ b/app/views/site_pages/holistically.html.erb
@@ -139,7 +139,7 @@
         </div>
 
         <div class="other-posts">
-          <%= link_to '← Discuss the college core socratically', academics_socratically_path, class:'prev' %>
+          <%= link_to '← Discuss the college core Socratically', academics_socratically_path, class:'prev' %>
         </div>
 
       </div>
