--- a/app/views/site_pages/sequentially.html.erb
+++ b/app/views/site_pages/sequentially.html.erb
@@ -111,7 +111,7 @@
 
         <div class="other-posts">
           <%= link_to '← Experience the college core Christianly', academics_christianly_path, class:'prev' %>
-          <%= link_to 'Experience the college core communally →', academics_communally_path, class:'next pull-right' %>
+          <%= link_to 'Experience the college core Communally →', academics_communally_path, class:'next pull-right' %>
         </div>
 
       </div>
