--- a/app/views/site_pages/communally.html.erb
+++ b/app/views/site_pages/communally.html.erb
@@ -70,8 +70,8 @@
         </div>
 
         <div class="other-posts">
-          <%= link_to '← Progress through the college core sequentially', academics_sequentially_path, class:'prev' %>
-          <%= link_to 'Journey through the college core globally →', academics_globally_path, class:'next pull-right' %>
+          <%= link_to '← Progress through the college core Sequentially', academics_sequentially_path, class:'prev' %>
+          <%= link_to 'Journey through the college core Globally →', academics_globally_path, class:'next pull-right' %>
         </div>
 
       </div>
