--- a/app/views/site_pages/globally.html.erb
+++ b/app/views/site_pages/globally.html.erb
@@ -63,8 +63,8 @@
         </div>
 
         <div class="other-posts">
-          <%= link_to '← Experience the college core communally', academics_communally_path, class:'prev' %>
-          <%= link_to 'Think through the college core critically →', academics_critically_path, class:'next pull-right' %>
+          <%= link_to '← Experience the college core Communally', academics_communally_path, class:'prev' %>
+          <%= link_to 'Think through the college core Critically →', academics_critically_path, class:'next pull-right' %>
         </div>
 
       </div>
