--- a/app/views/site_pages/socratically.html.erb
+++ b/app/views/site_pages/socratically.html.erb
@@ -87,8 +87,8 @@
         </div>
 
         <div class="other-posts">
-          <%= link_to '← Approach the college core classically', academics_classically_path, class:'prev' %>
-          <%= link_to 'Practice the college core holistically →', academics_holistically_path, class:'next pull-right' %>
+          <%= link_to '← Approach the college core Classically', academics_classically_path, class:'prev' %>
+          <%= link_to 'Practice the college core Holistically →', academics_holistically_path, class:'next pull-right' %>
         </div>
 
       </div>
