--- a/app/views/shared/_partners.erb
+++ b/app/views/shared/_partners.erb
@@ -8,7 +8,7 @@
       </p>
 
       <div class="logos">
-        <%= link_to image_tag('SDCC-logo.png'), 'http://sdcc.edu/academics/accreditation', target:'_blank' %>
+        <%= link_to image_tag('SDCLogowhite-873wTag.png'), 'http://sdcc.edu/academics/accreditation', target:'_blank' %>
         <%= link_to image_tag('WASC-logo.png'), 'http://www.wascsenior.org/', target:'_blank' %>
       </div>
 
