--- a/app/views/layouts/_footer.erb
+++ b/app/views/layouts/_footer.erb
@@ -11,7 +11,8 @@
   </div>
 
   <div class="col-sm-5 copyright">
-    Copyright &copy; 2015
+    Copyright &copy; 2015 | Website by
+    <%= link_to 'Red Sherpa', 'http://www.sherpa.red', target:'_blank' %>
   </div>
 
 </div>
