--- a/app/views/layouts/_head.erb
+++ b/app/views/layouts/_head.erb
@@ -6,7 +6,9 @@
 
 <meta name="robots" content="index, follow">
 
-<meta name="author" content="Red Sherpa LLC">
+<meta name="author" content="Rivendell San Diego Christian">
+
+<meta name="description" content="college education holistic socratic great books study abroad">
 
 <title><%= title %></title>
 
