--- a/app/views/shared/_features.erb
+++ b/app/views/shared/_features.erb
@@ -30,7 +30,7 @@
       <p>
         The college core ought to include the best works available if it is to develop the best students
         possible. We offer a Great Books curriculum where you, your colleagues and your faculty dialogue
-        with the greatest that has ever been thought and said.
+        with the greatest that have ever been thought and said.
       </p>
     </div>
     <div class="col-md-6 image" %>
