refactored layouts for HTML5

--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -20,13 +20,13 @@
 
     <%= yield %>
 
-    <div id="footer">
+    <footer id="footer">
 
         <div class="container">
             <%= render 'layouts/footer' %>
         </div>
 
-    </div>
+    </footer>
 
     <%= render 'shared/infusionsoft_tracker' %>
 
