--- a/app/views/layouts/site.html.erb
+++ b/app/views/layouts/site.html.erb
@@ -20,13 +20,13 @@
 
     <%= yield %>
 
-    <div id="footer-white">
+    <footer id="footer-white">
 
         <div class="container">
             <%= render 'layouts/landing_footer' %>
         </div>
 
-    </div>
+    </footer>
 
     <%= render 'shared/infusionsoft_tracker' %>
 
