--- a/app/views/layouts/error.html.erb
+++ b/app/views/layouts/error.html.erb
@@ -1,8 +1,13 @@
 <!DOCTYPE html>
-<html>
+
+<!--[if IE 8]> <html lang="en" class="ie8"> <![endif]-->
+<!--[if IE 9]> <html lang="en" class="ie9"> <![endif]-->
+<!--[if !IE]><!--> <html lang="en"> <!--<![endif]-->
+
 <head>
   <%= render 'layouts/head' %>
 </head>
+
 <body id="not-found" class="not-found-page">
 
 <div class="info">
