--- a/app/views/layouts/landing.html.erb
+++ b/app/views/layouts/landing.html.erb
@@ -1,4 +1,3 @@
-
 <!DOCTYPE html>
 
 <!--[if IE 8]> <html lang="en" class="ie8"> <![endif]-->
@@ -11,27 +10,27 @@
 
 <body id="home">
 
-<header class="navbar navbar-inverse hero" role="banner">
+    <header class="navbar navbar-inverse hero" role="banner">
 
-  <div class="container">
-    <%= render 'landing_pages/header' %>
-  </div>
+        <div class="container">
+            <%= render 'landing_pages/header' %>
+        </div>
 
-</header>
+    </header>
 
-<%= yield %>
+    <%= yield %>
 
-<div id="footer-white">
+    <footer id="footer-white">
 
-  <div class="container">
-    <%= render 'landing_pages/footer' %>
-  </div>
+        <div class="container">
+            <%= render 'landing_pages/footer' %>
+        </div>
 
-</div>
+    </footer>
 
-<%= render 'shared/infusionsoft_tracker' %>
+    <%= render 'shared/infusionsoft_tracker' %>
 
-<%= debug(params) if Rails.env.development? %>
+    <%= debug(params) if Rails.env.development? %>
 
 </body>
 
