refactored landing pages with HTML5 elements.

--- a/app/views/landing_pages/student.html.erb
+++ b/app/views/landing_pages/student.html.erb
@@ -1,41 +1,41 @@
-<div id="hero">
+<section id="hero">
 
   <%= render partial: 'shared/hero', locals: { heading: @heading, sub_heading: @sub_heading } %>
 
-</div>
+</section>
 
-<div id="features">
+<section id="features">
 
   <%= render 'shared/features' %>
 
-</div>
+</section>
 
-<div id="pricing">
+<section id="pricing">
 
   <%= render 'shared/reasons' %>
 
-</div>
+</section>
 
-<div id="slider">
+<section id="slider">
 
   <%= render 'shared/travel' %>
 
-</div>
+</section>
 
-<div id="testimonials">
+<section id="testimonials">
 
   <%= render 'shared/testimonials' %>
 
-</div>
+</section>
 
-<div id="cta">
+<section id="cta">
 
   <%= render 'shared/cta' %>
 
-</div>
+</section>
 
-<div id="clients">
+<section id="clients">
 
   <%= render 'shared/partners' %>
 
-</div>
+</section>
