refactored all views with HTML5 elements.

--- a/app/views/contacts/create.html.erb
+++ b/app/views/contacts/create.html.erb
@@ -1,4 +1,4 @@
-<div id="info">
+<section id="info">
   <div class="container">
     <%= content_tag :h3, @page_title %>
 
@@ -6,4 +6,4 @@
 
     <%= render 'form' if @contact.errors.any? %>
   </div>
-</div>
+</section>
