--- a/app/views/site_pages/about.html.erb
+++ b/app/views/site_pages/about.html.erb
@@ -1,4 +1,4 @@
-<div id="slider">
+<section id="slider">
   <div class="container">
 
     <div class="row header">
@@ -55,9 +55,9 @@
     </div>
 
   </div>
-</div>
+</section>
 
-<div id="info">
+<section id="info">
   <div class="container">
 
     <div class="row">
@@ -85,15 +85,15 @@
 
     <div class="row stats">
 
-      <div class="col-sm-4">
+      <div class="col-lg-4 col-sm-6">
         <strong>15:2</strong> student to faculty ratio
       </div>
 
-      <div class="col-sm-4">
+      <div class="col-lg-4 col-sm-3">
         <strong>9</strong> cohorts strong
       </div>
 
-      <div class="col-sm-4">
+      <div class="col-lg-4 col-sm-3">
         <strong>160</strong> graduates
       </div>
 
@@ -147,9 +147,9 @@
     </div>
 
   </div>
-</div>
+</section>
 
-<div id="cta">
+<section id="cta">
   <div class="container">
 
     <div class="row">
@@ -162,9 +162,9 @@
     </div>
 
   </div>
-</div>
+</section>
 
-<div id="accreditation">
+<section id="accreditation">
   <div class="container">
 
     <div class="row">
@@ -195,4 +195,4 @@
     </div>
 
   </div>
-</div>
+</section>
