--- a/app/views/site_pages/academics.html.erb
+++ b/app/views/site_pages/academics.html.erb
@@ -1,4 +1,4 @@
-<div id="tabs" class="tabs-smaller-margin">
+<section id="tabs" class="tabs-smaller-margin">
   <div class="container">
 
     <div class="row header">
@@ -157,9 +157,9 @@
     </div>
 
   </div>
-</div>
+</section>
 
-<div id="second-option">
+<section id="second-option">
   <div class="container">
 
     <div class="row header">
@@ -216,12 +216,12 @@
     </div>
 
   </div>
-</div>
+</section>
 
-<div id="cta">
+<section id="cta">
   <div class="container">
 
     <%= render 'shared/apply_cta' %>
 
   </div>
-</div>
+</section>
