--- a/app/views/site_pages/admissions.html.erb
+++ b/app/views/site_pages/admissions.html.erb
@@ -1,4 +1,4 @@
-<div id="tabs">
+<section id="tabs">
   <div class="container">
 
     <div class="row header">
@@ -41,12 +41,12 @@
     </div>
 
   </div>
-</div>
+</section>
 
-<div id="cta">
+<section id="cta">
   <div class="container">
 
     <%= render 'shared/apply_cta' %>
 
   </div>
-</div>
+</section>
