--- a/app/views/site_pages/apply_now.html.erb
+++ b/app/views/site_pages/apply_now.html.erb
@@ -1,4 +1,4 @@
-<div id="tabs">
+<section id="tabs">
   <div class="container">
 
     <div class="row header">
@@ -17,4 +17,4 @@
     </div>
 
   </div>
-</div>
+</section>
