--- a/app/views/site_pages/gallery.html.erb
+++ b/app/views/site_pages/gallery.html.erb
@@ -1,4 +1,4 @@
-<div id="showcase">
+<section id="showcase">
   <div class="container">
 
     <div class="row header">
@@ -22,4 +22,4 @@
     </div>
 
   </div>
-</div>
+</section>
