--- a/app/views/site_pages/home.html.erb
+++ b/app/views/site_pages/home.html.erb
@@ -1,4 +1,4 @@
-<div id="hero">
+<section id="hero">
 
   <div class="container">
 
@@ -16,39 +16,39 @@
 
   </div>
 
-</div>
+</section>
 
-<div id="features">
+<section id="features">
 
   <%= render 'shared/features' %>
 
-</div>
+</section>
 
-<div id="pricing">
+<section id="pricing">
 
   <%= render 'shared/reasons' %>
 
-</div>
+</section>
 
-<div id="slider">
+<section id="slider">
 
   <%= render 'shared/travel' %>
 
-</div>
+</section>
 
-<div id="testimonials">
+<section id="testimonials">
 
   <%= render 'shared/testimonials' %>
 
-</div>
+</section>
 
-<div id="cta">
+<section id="cta">
   <p>Take the first step on your 16-month journey of a lifetime!</p>
   <%= link_to 'Apply now', admissions_apply_now_path %>
-</div>
+</section>
 
-<div id="clients">
+<section id="clients">
 
   <%= render 'shared/partners' %>
 
-</div>
+</section>
