--- a/app/views/site_pages/student_life.html.erb
+++ b/app/views/site_pages/student_life.html.erb
@@ -1,4 +1,4 @@
-<div id="tabs" class="tabs-smaller-margin">
+<section id="tabs" class="tabs-smaller-margin">
   <div class="container">
 
     <div class="row header">
@@ -65,9 +65,9 @@
     </div>
 
   </div>
-</div>
+</section>
 
-<div id="first-option">
+<section id="first-option">
   <div class="container">
 
     <div class="row header">
@@ -125,12 +125,12 @@
     </div>
 
   </div>
-</div>
+</section>
 
-<div id="cta">
+<section id="cta">
   <div class="container">
 
     <%= render 'shared/apply_cta' %>
 
   </div>
-</div>
+</section>
