--- a/app/views/contacts/new.html.erb
+++ b/app/views/contacts/new.html.erb
@@ -1,4 +1,4 @@
-<div id="map" style="height:400px;">
+<section id="map" style="height:400px;">
 
   <iframe width="100%" height="400" frameborder="0" scrolling="no" marginheight="0" marginwidth="0" src="https://maps.google.com.mx/?ie=UTF8&amp;ll=44.796631,-93.370818&amp;spn=0.023259,0.038495&amp;t=m&amp;z=15&amp;output=embed"></iframe>
 
@@ -7,9 +7,9 @@
     <%= content_tag :div, nil, class:'marker' %>
   </div>
 
-</div>
+</section>
 
-<div id="info">
+<section id="info">
   <div class="container">
 
     <div class="row">
@@ -20,7 +20,7 @@
         <%= render 'form' %>
       </div>
 
-      <div class="col-md-4 contact">
+      <aside class="col-md-4 contact">
 
         <div class="address">
           <h3>Our address</h3>
@@ -45,9 +45,11 @@
           <%= link_to icon('pinterest', nil, class:'fa-3x'), @pinterest_url, target:'_blank' %>
         </div>
 
-      </div>
+      </aside>
 
     </div>
 
   </div>
-</div>
+</section>
+
+<!-- TODO:  add form validation to contact form. -->
