--- a/app/views/site_pages/classically.html.erb
+++ b/app/views/site_pages/classically.html.erb
@@ -1,4 +1,4 @@
-<div id="blogpost-wrapper">
+<article id="blogpost-wrapper">
   <div class="container">
 
     <div class="row">
@@ -76,4 +76,4 @@
     </div>
 
   </div>
-</div>
+</article>
