--- a/app/views/site_pages/holistically.html.erb
+++ b/app/views/site_pages/holistically.html.erb
@@ -1,4 +1,4 @@
-<div id="blogpost-wrapper">
+<article id="blogpost-wrapper">
   <div class="container">
 
     <div class="row">
@@ -146,4 +146,4 @@
     </div>
 
   </div>
-</div>
+</article>
