upgraded to HTML5 elements; added ALT attributes to all images.

--- a/app/views/shared/_features.erb
+++ b/app/views/shared/_features.erb
@@ -17,9 +17,9 @@
         professor’s.
       </p>
     </div>
-    <div class="col-md-6 image">
-      <%= image_tag 'questions.jpg', class:'img-responsive img-rounded' %>
-    </div>
+    <figure class="col-md-6 image">
+      <%= image_tag 'questions.jpg', class:'img-responsive img-rounded', alt:'ask the greatest questions image' %>
+    </figure>
   </div>
 
   <%= content_tag :div, nil, class:'divider' %>
@@ -33,9 +33,9 @@
         with the greatest that have ever been thought and said.
       </p>
     </div>
-    <div class="col-md-6 image" %>
-      <%= image_tag 'great_minds.jpg', size:'371x246', class:'img-responsive img-rounded' %>
-    </div>
+    <figure class="col-md-6 image" %>
+      <%= image_tag 'great_minds.jpg', size:'371x246', class:'img-responsive img-rounded', alt:'greatest minds image' %>
+    </figure>
   </div>
 
   <%= content_tag :div, nil, class:'divider' %>
@@ -50,9 +50,9 @@
         worldview perspective on all of life.
       </p>
     </div>
-    <div class="col-md-6 image" %>
-      <%= image_tag 'bible2.jpg', size:'371x246', class:'img-responsive img-rounded' %>
-    </div>
+    <figure class="col-md-6 image" %>
+      <%= image_tag 'bible2.jpg', size:'371x246', class:'img-responsive img-rounded', alt:'greatest story every told bible image' %>
+    </figure>
   </div>
 
 </div>
