--- a/app/views/shared/_hero.erb
+++ b/app/views/shared/_hero.erb
@@ -9,6 +9,6 @@
         <%= link_to 'Request a brochure', new_lead_path, class:'button-outline' %>
     </div>
 
-  <%= content_tag :div, nil, class:'img' %>
+  <%= content_tag :figure, nil, class:'img' %>
 
 </div>
