--- a/app/views/shared/_partners.erb
+++ b/app/views/shared/_partners.erb
@@ -7,10 +7,10 @@
         San Diego Christian College is accredited by the Senior Commission of the Western Association of Schools and Colleges.
       </p>
 
-      <div class="logos">
-        <%= link_to image_tag('SDCLogowhite-873wTag.png'), 'http://sdcc.edu/academics/accreditation', target:'_blank' %>
-        <%= link_to image_tag('WASC-logo.png'), 'http://www.wascsenior.org/', target:'_blank' %>
-      </div>
+      <figure class="logos">
+        <%= link_to image_tag('SDCLogowhite-873wTag.png', alt:'SDCC logo'), 'http://sdcc.edu/academics/accreditation', target:'_blank' %>
+        <%= link_to image_tag('WASC-logo.png', alt:'WASC logo'), 'http://www.wascsenior.org/', target:'_blank' %>
+      </figure>
 
     </div>
   </div>
