--- a/app/views/shared/_travel.erb
+++ b/app/views/shared/_travel.erb
@@ -9,9 +9,7 @@
   <div class="row">
     <div class="col-md-12 slide-wrapper">
 
-      <div class="slideshow">
-
-      </div>
+      <%= content_tag :figure, nil, class:'slideshow' %>
 
     </div>
   </div>
