--- a/app/views/site_pages/_tuition_pane.erb
+++ b/app/views/site_pages/_tuition_pane.erb
@@ -17,9 +17,9 @@
 
 </div>
 
-<div class="col-md-6 image">
-  <%= image_tag 'tuition.jpg', class:'img-responsive img-rounded' %>
-</div>
+<figure class="col-md-6 image">
+  <%= image_tag 'tuition.jpg', class:'img-responsive img-rounded', alt:'all-inclusive tuition image' %>
+</figure>
 
 <div class="col-md-12 info">
 
