--- a/app/views/site_pages/about.html.erb
+++ b/app/views/site_pages/about.html.erb
@@ -46,9 +46,9 @@
       <div class="col-md-12">
         <div class="flexslider">
           <ul class="slides">
-            <%= content_tag :li, image_tag('aboutus1.jpg') %>
-            <%= content_tag :li, image_tag('aboutus2.jpg') %>
-            <%= content_tag :li, image_tag('aboutus3.jpg') %>
+            <%= content_tag :li, image_tag('aboutus1.jpg', alt:'Rivendell SDCC Minnesota Campus') %>
+            <%= content_tag :li, image_tag('aboutus2.jpg', alt:'Rivendell SDCC Minnesota Campus') %>
+            <%= content_tag :li, image_tag('aboutus3.jpg', alt:'Rivendell SDCC Minnesota Campus') %>
           </ul>
         </div>
       </div>
@@ -101,48 +101,48 @@
 
     <div class="row team">
 
-      <div class="col-md-12 team-row">
-        <%= image_tag 'staff/lorri-229x300.jpg',
+      <figure class="col-md-12 team-row">
+        <%= image_tag 'staff/lorri-229x300.jpg', alt:'Lorri Ague photo',
                       data: { toggle:'tooltip', placement:'top', title: 'Lorri Ague - Dean of Adult & Professional Studies' } %>
-        <%= image_tag 'staff/evans_bev2-229x300.jpg',
+        <%= image_tag 'staff/evans_bev2-229x300.jpg', alt:'Bev Evans photo',
                       data: { toggle:'tooltip', placement:'top', title: 'Bev Evans - Director of Hospitality & Cultural Events' } %>
-        <%= image_tag 'staff/evans_robert-229x300.jpg',
+        <%= image_tag 'staff/evans_robert-229x300.jpg', alt:'Robert Evans photo',
                       data: { toggle:'tooltip', placement:'top', title: 'Robert Evans - Student Success Coach' } %>
-        <%= image_tag 'staff/Hurlbut_Rick-229x300.jpg',
+        <%= image_tag 'staff/Hurlbut_Rick-229x300.jpg', alt:'Rick Hurlbut photo',
                       data: { toggle:'tooltip', placement:'top', title: 'Rick Hurlbut - Faculty' } %>
-        <%= image_tag 'staff/ingle_jeffrey2-229x300.jpg',
+        <%= image_tag 'staff/ingle_jeffrey2-229x300.jpg', alt:'Jeff Ingle photo',
                       data: { toggle:'tooltip', placement:'top', title: 'Jeffrey Ingle - Faculty' } %>
-        <%= image_tag 'staff/kasperek_kelli2-229x300.jpg',
+        <%= image_tag 'staff/kasperek_kelli2-229x300.jpg', alt:'Kelli Kasperek photo',
                       data: { toggle:'tooltip', placement:'top', title: 'Kelli Kasperek - Admissions Counselor' } %>
-      </div>
+      </figure>
 
-      <div class="col-md-12 team-row">
-        <%= image_tag 'staff/mauser_bj3-229x300.jpg', size: '90x118',
+      <figure class="col-md-12 team-row">
+        <%= image_tag 'staff/mauser_bj3-229x300.jpg', size: '90x118', alt:'BJ Mauser photo',
                       data: { toggle:'tooltip', placement:'top', title: 'Bernard James Mauser - Faculty' } %>
-        <%= image_tag 'staff/mcconnell_donald-229x300.jpg',
+        <%= image_tag 'staff/mcconnell_donald-229x300.jpg', alt:'Donald McConnell photo',
                       data: { toggle:'tooltip', placement:'top', title: 'Donald McConnell - Faculty' } %>
-        <%= image_tag 'staff/mikel_elaine2-229x300.jpg',
+        <%= image_tag 'staff/mikel_elaine2-229x300.jpg', alt:'Elaine Mikel photo',
                       data: { toggle:'tooltip', placement:'top', title: 'Elaine Mikel - Mentor' } %>
-        <%= image_tag 'staff/miller_bill2-229x300.jpg',
+        <%= image_tag 'staff/miller_bill2-229x300.jpg', alt:'Bill Miller photo',
                       data: { toggle:'tooltip', placement:'top', title: 'Bill Miller - Faculty' } %>
-        <%= image_tag 'staff/norment_davis2-229x300.jpg',
+        <%= image_tag 'staff/norment_davis2-229x300.jpg', alt:'Davis Norment photo',
                       data: { toggle:'tooltip', placement:'top', title: 'Davis Norment - Faculty' } %>
-        <%= image_tag 'staff/norment_jean2-229x300.jpg',
+        <%= image_tag 'staff/norment_jean2-229x300.jpg', alt:'Jean Norment photo',
                       data: { toggle:'tooltip', placement:'top', title: 'Jean Norment - Director of Mentoring' } %>
-      </div>
+      </figure>
 
-      <div class="col-md-12 team-row">
-        <%= image_tag 'staff/poarch_jason-229x300.jpg',
+      <figure class="col-md-12 team-row">
+        <%= image_tag 'staff/poarch_jason-229x300.jpg', alt:'Jason Poarch photo',
                       data: { toggle:'tooltip', placement:'top', title: 'Jason Poarch - Recruiting Coordinator' } %>
-        <%= image_tag 'staff/reid_david-229x300.jpg',
+        <%= image_tag 'staff/reid_david-229x300.jpg', alt:'Dave Reid photo',
                       data: { toggle:'tooltip', placement:'top', title: 'Dave Reid - Faculty' } %>
-        <%= image_tag 'staff/petree_alex-229x300.jpg',
+        <%= image_tag 'staff/petree_alex-229x300.jpg', alt:'Alexandra Tousley photo',
                       data: { toggle:'tooltip', placement:'top', title: 'Alexandra Tousley- Admissions Counselor' } %>
-        <%= image_tag 'staff/williams_jordan-229x300.jpg',
+        <%= image_tag 'staff/williams_jordan-229x300.jpg', alt:'Jordan Williams photo',
                       data: { toggle:'tooltip', placement:'top', title: 'Jordan Williams - Student Life Coordinator' } %>
-        <%= image_tag 'staff/yackel_amanda2-229x300.jpg',
+        <%= image_tag 'staff/yackel_amanda2-229x300.jpg', alt:'Amanda Yackel photo',
                       data: { toggle:'tooltip', placement:'top', title: 'Amanda Yackel - Student Success Coach' } %>
-      </div>
+      </figure>
 
     </div>
 
