--- a/app/views/site_pages/academics.html.erb
+++ b/app/views/site_pages/academics.html.erb
@@ -32,15 +32,15 @@
               </ul>
               <%= content_tag :p, academics_read_more_link('christianly') %>
             </div>
-            <div class="col-md-6 image">
-              <%= image_tag 'christianly.jpg', width:'359', class:'img-responsive img-rounded' %>
-            </div>
+            <figure class="col-md-6 image">
+              <%= image_tag 'christianly.jpg', width:'359', class:'img-responsive img-rounded', alt:'christian college core image' %>
+            </figure>
           </div>
 
           <div id="sequentially" class="tab-pane fade">     <!-- SEQUENTIALLY -->
-            <div class="col-md-6 image">
-              <%= image_tag 'sequential.jpg', width:'359', class:'img-responsive img-rounded' %>
-            </div>
+            <figure class="col-md-6 image">
+              <%= image_tag 'sequential.jpg', width:'359', class:'img-responsive img-rounded', alt:'sequenced modular curriculum image' %>
+            </figure>
             <div class="col-md-6 info">
               <h4>Progress through the college core <strong><i>sequentially</i></strong></h4>
               <p>Study the liberal arts one subject at a time in the flow of the biblical narrative.</p>
@@ -67,15 +67,15 @@
               </ul>
               <%= content_tag :p, academics_read_more_link('communally') %>
             </div>
-            <div class="col-md-6 image">
-              <%= image_tag 'communally.jpg', width:'359', class:'img-responsive img-rounded' %>
-            </div>
+            <figure class="col-md-6 image">
+              <%= image_tag 'communally.jpg', width:'359', class:'img-responsive img-rounded', alt:'authentic community image' %>
+            </figure>
           </div>
 
           <div id="globally" class="tab-pane fade">     <!-- GLOBALLY -->
-            <div class="col-md-6 image">
-              <%= image_tag 'globally.jpg', width:'359', class:'img-responsive img-rounded' %>
-            </div>
+            <figure class="col-md-6 image">
+              <%= image_tag 'globally.jpg', width:'359', class:'img-responsive img-rounded', alt:'study abroad image' %>
+            </figure>
             <div class="col-md-6 info">
               <h4>Journey through the college core <strong><i>globally</i></strong></h4>
               <p>Study the fine arts in Rome, Florence, Venice, and Assisi.  Need we say more?</p>
@@ -99,15 +99,15 @@
               </ul>
               <%= content_tag :p, academics_read_more_link('critically') %>
             </div>
-            <div class="col-md-6 image">
-              <%= image_tag 'critically.jpg', width:'359', class:'img-responsive img-rounded' %>
-            </div>
+            <figure class="col-md-6 image">
+              <%= image_tag 'critically.jpg', width:'359', class:'img-responsive img-rounded', alt:'critical thinking image' %>
+            </figure>
           </div>
 
           <div id="classically" class="tab-pane fade">     <!-- CLASSICALLY -->
-            <div class="col-md-6 image">
-              <%= image_tag 'classically.jpg', width:'359', class:'img-responsive img-rounded' %>
-            </div>
+            <figure class="col-md-6 image">
+              <%= image_tag 'classically.jpg', width:'359', class:'img-responsive img-rounded', alt:'great books curriculum image' %>
+            </figure>
             <div class="col-md-6 info">
               <h4>Approach the college core <strong><i>classically</i></strong></h4>
               <p>Learn from the greatest minds who ever lived.</p>
@@ -130,15 +130,15 @@
               </ul>
               <%= content_tag :p, academics_read_more_link('socratically') %>
             </div>
-            <div class="col-md-6 image">
-              <%= image_tag 'socratically.jpg', width:'359', class:'img-responsive img-rounded' %>
-            </div>
+            <figure class="col-md-6 image">
+              <%= image_tag 'socratically.jpg', width:'359', class:'img-responsive img-rounded', class:'socratic discussion image' %>
+            </figure>
           </div>
 
           <div id="holistically" class="tab-pane fade">     <!-- HOLISTICALLY -->
-            <div class="col-md-6 image">
-              <%= image_tag 'holistically.jpg', width:'359', class:'img-responsive img-rounded' %>
-            </div>
+            <figure class="col-md-6 image">
+              <%= image_tag 'holistically.jpg', width:'359', class:'img-responsive img-rounded', alt:'holistic education image' %>
+            </figure>
             <div class="col-md-6 info">
               <h4>Practice the college core <strong><i>holistically</i></strong></h4>
               <p>You are more than a brain.  You are intellectual, spiritual, moral, social, and emotional.</p>
@@ -171,19 +171,19 @@
     <div class="row">
 
       <div class="col-md-4 feature">
-        <%= image_tag 'circle-icons/one-color/denied.png' %>
+        <%= image_tag 'circle-icons/one-color/denied.png', alt:'prepare for life image' %>
         <strong>No majors, minors, and specializations</strong>
         <p>Undertake a 16-month, biblically centered liberal arts curriculum that prepares you for life.</p>
       </div>
 
       <div class="col-md-4 feature">
-        <%= image_tag 'circle-icons/one-color/takeoff.png' %>
+        <%= image_tag 'circle-icons/one-color/takeoff.png', alt:'study abroad image' %>
         <strong>Global</strong>
         <p>Study Fine Arts in Rome, Venice, Florence, and Assisi.</p>
       </div>
 
       <div class="col-md-4 feature">
-        <%= image_tag 'circle-icons/one-color/x.png' %>
+        <%= image_tag 'circle-icons/one-color/x.png', alt:'socratic discussion image' %>
         <strong>No lectures or textbooks</strong>
         <p>
           The Bible and great literary classics replace contemporary textbooks.  Socratic discussions
@@ -196,19 +196,19 @@
     <div class="row">
 
       <div class="col-md-4 feature">
-        <%= image_tag 'circle-icons/one-color/lightbulb.png' %>
+        <%= image_tag 'circle-icons/one-color/lightbulb.png', alt:'critical thinking image' %>
         <strong>Critical thinking</strong>
         <p>Apply principles of logic and disciplines useful for critical evaluation.</p>
       </div>
 
       <div class="col-md-4 feature">
-        <%= image_tag 'circle-icons/one-color/global.png' %>
+        <%= image_tag 'circle-icons/one-color/global.png', alt:'authentic community image' %>
         <strong>Authentic community</strong>
         <p>Belong to a group of 20-30 colleagues, 2 faculty, and a mentor for your entire 16-month experience.</p>
       </div>
 
       <div class="col-md-4 feature">
-        <%= image_tag 'circle-icons/one-color/heart.png' %>
+        <%= image_tag 'circle-icons/one-color/heart.png', alt:'apprenticeship education' %>
         <strong>Apprenticeship</strong>
         <p>Practice daily what you are taught.</p>
       </div>
