--- a/app/views/site_pages/globally.html.erb
+++ b/app/views/site_pages/globally.html.erb
@@ -3,7 +3,7 @@
 
     <div class="row">
       <div class="col-md-12">
-        <%= content_tag :div, image_tag('globally.jpg', class:'img-responsive'), class:'main-pic' %>
+        <%= content_tag :figure, image_tag('globally.jpg', class:'img-responsive', alt:'study abroad image'), class:'main-pic' %>
       </div>
     </div>
 
