--- a/app/views/site_pages/home.html.erb
+++ b/app/views/site_pages/home.html.erb
@@ -12,7 +12,7 @@
       <%= link_to 'Apply now', admissions_apply_now_path, class:'button' %>
     </div>
 
-    <%= content_tag :div, nil, class:'img animated fadeInRight' %>
+    <%= content_tag :figure, nil, class:'img animated fadeInRight' %>
 
   </div>
 
