--- a/app/views/site_pages/student_life.html.erb
+++ b/app/views/site_pages/student_life.html.erb
@@ -24,15 +24,15 @@
                 and various audio-video capabilities.
               </p>
             </div>
-            <div class="col-md-6 image">
-              <%= image_tag 'student_life/academic_facilities.jpg', class:'img-responsive img-rounded' %>
-            </div>
+            <figure class="col-md-6 image">
+              <%= image_tag 'student_life/academic_facilities.jpg', class:'img-responsive img-rounded', alt:'socratic discussion image' %>
+            </figure>
           </div>
 
           <div id="dining-facilities" class="tab-pane fade">  <!-- DINING FACILITIES -->
-            <div class="col-md-6 image">
-              <%= image_tag 'student_life/dining_facilities.jpg', class:'img-responsive img-rounded' %>
-            </div>
+            <figure class="col-md-6 image">
+              <%= image_tag 'student_life/dining_facilities.jpg', class:'img-responsive img-rounded', alt:'authentic community image' %>
+            </figure>
             <div class="col-md-6 info">
               <h4>Break bread with your classmates three times a day.</h4>
               <p>
@@ -54,9 +54,9 @@
                 floor share a student common area and shower facilities.
               </p>
             </div>
-            <div class="col-md-6 image">
-              <%= image_tag 'student_life/student_housing.jpg', class:'img-responsive img-rounded' %>
-            </div>
+            <figure class="col-md-6 image">
+              <%= image_tag 'student_life/student_housing.jpg', class:'img-responsive img-rounded', alt:'authentic community image' %>
+            </figure>
           </div>
 
         </div>
@@ -89,9 +89,9 @@
           <em>Beauty and the Beast</em>, and <em>Mid Summer Night's Dream</em>
         </p>
       </div>
-      <div class="col-md-6 image">
-        <%= image_tag 'student_life/cultural_events.jpg', class:'img-responsive img-rounded' %>
-      </div>
+      <figure class="col-md-6 image">
+        <%= image_tag 'student_life/cultural_events.jpg', class:'img-responsive img-rounded', alt:'life skills education image' %>
+      </figure>
     </div>
 
     <div class="row feature backwards">
@@ -105,9 +105,9 @@
           effort to lead a healthier, happier life.
         </p>
       </div>
-      <div class="col-md-6 image">
-        <%= image_tag 'student_life/health_fitness.jpg', class:'img-responsive img-rounded' %>
-      </div>
+      <figure class="col-md-6 image">
+        <%= image_tag 'student_life/health_fitness.jpg', class:'img-responsive img-rounded', alt:'holy healthy living image' %>
+      </figure>
     </div>
 
     <div class="row feature">
@@ -119,9 +119,9 @@
           The gym provides students with a great place to exercise, especially when the winter weather arrives.
         </p>
       </div>
-      <div class="col-md-6 image">
-        <%= image_tag 'student_life/amenities.jpg', class:'img-responsive img-rounded' %>
-      </div>
+      <figure class="col-md-6 image">
+        <%= image_tag 'student_life/amenities.jpg', class:'img-responsive img-rounded', alt:'holy healthy living image' %>
+      </figure>
     </div>
 
   </div>
