--- a/app/views/shared/_testimonials.erb
+++ b/app/views/shared/_testimonials.erb
@@ -19,11 +19,11 @@
             <%= content_tag :div, nil, class:'arrow-border' %>
           </div>
         </div>
-        <div class="author">
-          <%= image_tag 'RandySims_bw1.jpg', class:'pic' %>
-          <%= content_tag :div, 'Randy Sims', class:'name' %>
-          <%= content_tag :div, 'Worldview Academy', class:'company' %>
-        </div>
+        <figure class="author">
+          <%= image_tag 'RandySims_bw1.jpg', class:'pic', alt:'Randy Sims photo' %>
+          <%= content_tag :figcaption, 'Randy Sims', class:'name' %>
+          <%= content_tag :figcaption, 'Worldview Academy', class:'company' %>
+        </figure>
       </div>
     </div>
 
@@ -38,11 +38,11 @@
             <%= content_tag :div, nil, class:'arrow-border' %>
           </div>
         </div>
-        <div class="author">
-          <%= image_tag 'stonestreet.jpg', class:'pic' %>
-          <%= content_tag :div, 'John Stonestreet', class:'name' %>
-          <%= content_tag :div, 'Summit Ministries', class:'company' %>
-        </div>
+        <figure class="author">
+          <%= image_tag 'stonestreet.jpg', class:'pic', alt:'John Stonestreet photo' %>
+          <%= content_tag :figcaption, 'John Stonestreet', class:'name' %>
+          <%= content_tag :figcaption, 'Summit Ministries', class:'company' %>
+        </figure>
       </div>
     </div>
 
