--- a/app/views/site_pages/_finaid_pane.erb
+++ b/app/views/site_pages/_finaid_pane.erb
@@ -13,9 +13,9 @@
 
 </div>
 
-<div class="col-md-6 image">
-  <%= image_tag 'finaid.jpg', class:'img-responsive img-rounded' %>
-</div>
+<figure class="col-md-6 image">
+  <%= image_tag 'finaid.jpg', class:'img-responsive img-rounded', class:'financial aid image' %>
+</figure>
 
 <div class="col-md-12 info">
 
