--- a/app/views/contacts/_form.erb
+++ b/app/views/contacts/_form.erb
@@ -11,8 +11,8 @@
     </div>
 
     <div class="form-group">
-      <%= f.label :phone %>
-      <%= f.text_field :phone, class:'form-control' %>
+      <%= f.label :phone, 'Phone (optional)' %>
+      <%= f.telephone_field :phone, class:'form-control' %>
     </div>
 
     <div class="form-group">
