changed hompage hero text.

--- a/app/views/shared/_hero.erb
+++ b/app/views/shared/_hero.erb
@@ -1,9 +1,12 @@
 <div class="container">
 
     <h1 class="hero-text animated fadeInDown">
-        Spend your first 16-months<br />
-        of college with us
+      Instill meaning<br /> back into education
     </h1>
+
+    <p class="sub-text animated fadeInDown">
+      Study the gen eds like no one else.
+    </p>
 
     <div class="cta animated fadeInDown">
         <%= link_to 'Request a brochure', new_lead_path, class:'button-outline' %>
