--- a/app/views/site_pages/academics.html.erb
+++ b/app/views/site_pages/academics.html.erb
@@ -42,7 +42,7 @@
               <%= image_tag 'sequential.jpg', width:'359', class:'img-responsive img-rounded', alt:'sequenced modular curriculum image' %>
             </figure>
             <div class="col-md-6 info">
-              <h4>Progress through the college core <strong><i>sequentially</i></strong></h4>
+              <h4>Progress through the college core <strong><i>Sequentially</i></strong></h4>
               <p>Study the liberal arts one subject at a time in the flow of the biblical narrative.</p>
               <ul>
                 <li>Enhance academic performance</li>
@@ -55,7 +55,7 @@
 
           <div id="communally" class="tab-pane fade">     <!-- COMMUNALLY -->
             <div class="col-md-6 info">
-              <h4>Experience the college core <strong><i>communally</i></strong></h4>
+              <h4>Experience the college core <strong><i>Communally</i></strong></h4>
               <p>
                 Belong to a cohort of 20-30 colleagues, 2 faculty, and a mentor, and remain together
                 for the entire program.
@@ -77,7 +77,7 @@
               <%= image_tag 'globally.jpg', width:'359', class:'img-responsive img-rounded', alt:'study abroad image' %>
             </figure>
             <div class="col-md-6 info">
-              <h4>Journey through the college core <strong><i>globally</i></strong></h4>
+              <h4>Journey through the college core <strong><i>Globally</i></strong></h4>
               <p>Study the fine arts in Rome, Florence, Venice, and Assisi.  Need we say more?</p>
               <ul>
                 <li>Experience cross-cultural living</li>
@@ -90,7 +90,7 @@
 
           <div id="critically" class="tab-pane fade">     <!-- CRITICALLY -->
             <div class="col-md-6 info">
-              <h4>Think through the college core <strong><i>critically</i></strong></h4>
+              <h4>Think through the college core <strong><i>Critically</i></strong></h4>
               <p>Learn a critical thinking method and apply it every day to every subject and assignment.</p>
               <ul>
                 <li>Learn how to learn</li>
@@ -109,7 +109,7 @@
               <%= image_tag 'classically.jpg', width:'359', class:'img-responsive img-rounded', alt:'great books curriculum image' %>
             </figure>
             <div class="col-md-6 info">
-              <h4>Approach the college core <strong><i>classically</i></strong></h4>
+              <h4>Approach the college core <strong><i>Classically</i></strong></h4>
               <p>Learn from the greatest minds who ever lived.</p>
               <ul>
                 <li>Study under the original authors of the 'Great Books'</li>
@@ -121,7 +121,7 @@
 
           <div id="socratically" class="tab-pane fade">     <!-- SOCRATICALLY -->
             <div class="col-md-6 info">
-              <h4>Discuss the college core <strong><i>socratically</i></strong></h4>
+              <h4>Discuss the college core <strong><i>Socratically</i></strong></h4>
               <p>Question and discuss subjects instead of listening to lectures.</p>
               <ul>
                 <li>Become an active learner</li>
@@ -140,7 +140,7 @@
               <%= image_tag 'holistically.jpg', width:'359', class:'img-responsive img-rounded', alt:'holistic education image' %>
             </figure>
             <div class="col-md-6 info">
-              <h4>Practice the college core <strong><i>holistically</i></strong></h4>
+              <h4>Practice the college core <strong><i>Holistically</i></strong></h4>
               <p>You are more than a brain.  You are intellectual, spiritual, moral, social, and emotional.</p>
               <ul>
                 <li>Develop habits of character</li>
