--- a/app/views/shared/_features.erb
+++ b/app/views/shared/_features.erb
@@ -12,7 +12,7 @@
       </h4>
       <p>
         The college core ought to pursue life’s great questions if students are to formulate a framework for
-        their everyday existence. We offer a graduate style environment where students take a greater
+        their everyday existence. We offer a graduate-style environment where students take a greater
         role in the classroom. When discussing the great questions, your input is just as important as your
         professor’s.
       </p>
@@ -45,7 +45,7 @@
       <h4>...all in the context of the greatest story ever told -- the Bible.</h4>
       <p>
         The college core ought to carry a right posture before the Creator if students are to have a right view
-        of His creation. We consider the Bible the greatest 'great book' of all and the ultimate
+        of His creation. We consider the Bible the greatest Great Book of all and the ultimate
         authoritative source. All subjects are tied into God’s Story and designed to give you a biblical
         worldview perspective on all of life.
       </p>
